--- a/main_hub/templates/main_hub/posts.html
+++ b/main_hub/templates/main_hub/posts.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <section id="filter_posts_section">
+        <!-- <button>Home button?</button> -->
         <button id="news_button">
             News
         </button>    
@@ -13,32 +14,38 @@
         <button id="random_button">
             Random
         </button>
-
     </section>
+    
     <section id="news_section" class="post_section">
         <h2>News</h2>
     {% for post in news_posts %}
-        <a href="{% url 'main_hub:post' post.id %}">
-        <h3>{{ post.title }}</h3>
-        <p>{{ post.date_added }}</p>
-        <p>{{ post.owner }}</p>
-        <img class="post_images" src="{{ post.photo.url }}"></a>
+            <a href="{% url 'main_hub:post' post.id %}">
+            <section class="post">
+            <p>{{ post.date_added }}</p>
+            <h3>{{ post.title }}</h3>
+            <img class="post_images" src="{{ post.photo.url }}"></section></a>
     {% endfor %}
     </section>
 
     <section id="events_section" class = "post_section hide_posts">
         <h2>Events</h2>
     {% for post in event_posts %}
-        <h3>{{ post.title }}</h3>
-        <a href="{% url 'main_hub:post' post.id %}"><img class="post_images" src="{{ post.photo.url }}"></a>
+        <section class="post">
+            <a href="{% url 'main_hub:post' post.id %}">
+            <h3>{{ post.title }}</h3>
+            <img class="post_images" src="{{ post.photo.url }}"></a>
+        </section>
     {% endfor %}
     </section>
 
     <section id = "random_section" class = "post_section hide_posts">
         <h2>Random</h2>
     {% for post in random_posts %}
-        <h3>{{ post.title }}</h3>
-        <a href="{% url 'main_hub:post' post.id %}"><img class="post_images" src="{{ post.photo.url }}"></a>
+        <section class="post">
+            <a href="{% url 'main_hub:post' post.id %}">
+            <h3>{{ post.title }}</h3>
+            <img class="post_images" src="{{ post.photo.url }}"></a>
+        </section>
     {% endfor %}
     </section>  
 
