--- a/main_hub/static/styles.css
+++ b/main_hub/static/styles.css
@@ -1,63 +1,132 @@
 html {
-    background: rgb(81,136,223);
-    background: linear-gradient(180deg, rgba(81,136,223,1) 0%, rgba(69,165,227,1) 0%, rgba(61,182,230,1) 0%, rgba(52,203,233,1) 5%, rgba(134,226,243,1) 21%, rgba(227,253,255,1) 80%, rgba(255,255,255,1) 100%);
-    background-repeat: no-repeat;
     height: 100vh; 
     overflow-y: hidden;
     min-width: 300px;
 }
 
 body {
-    height: 100vh; 
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    color: #333;
+    overflow-y: hidden;
+    background-color: rgb(255, 255, 255);
 }
 
 header {
-    height: 60px;
+    background-color: black;
+    height: fit-content;
     width: 100%;
     margin: 0 auto;
-    background-color: white;
-    box-shadow: 4px 4px 4px;
+    /* box-shadow: 4px 4px 4px; */
     text-align: center;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     align-items: center;
+    /* border-bottom: 4px solid #333; */
 }
 
 main {
     /* ADD A SCROLL BAR IN MAIN FOR IMAGES Then set a fixed height for background color- changes to dark for dark mode */
+    height: 90vh;
+    overflow-y: scroll;
+    /* width: vw; */
+    /* background: linear-gradient(180deg, rgba(81,136,223,1) 0%, rgba(69,165,227,1) 0%, rgba(61,182,230,1) 0%, rgba(52,203,233,1) 5%, rgba(134,226,243,1) 21%, rgba(227,253,255,1) 80%, rgba(255,255,255,1) 100%); */
 }
 
 h1 {
     grid-column: 1/6;
     margin-block-start: 0;
     margin-block-end: 0;
+    font-family: 'Oswald', 'sans-serif';
 }
 
-h1 a {
-    font-family: 'Alegreya Sans', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 700;
+h1 a, h1 a:visited{
+    color: white;
+}
+
+/* For navigation button etc */
+.show {
+    display: block;
 }
 
 nav {
     grid-column: 7/9;
+    position: relative;;
+    
 }
 
 nav ul {
     text-decoration: none;
     list-style-type: none;
     padding-inline-start: 0px;
-    display: flex;
+    display: none;
+    position:absolute;
+    top: 0;
+    right: 0px;
+    width: 100vw;
+    height: 50vh;
+    background-color: #4ba8cd;
+    color: blue;
+    transition: ease-in-out;
 }
 
 a, a:visited {
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
-
 h2 {
-    font-family: 'Alegreya Sans', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 700;
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 600;
+    font-size: 35px;
+    padding-left: 20px;
+    color: black;
+}
+
+h3 {
+    text-transform: uppercase;
+}
+
+h3 a {
+    color: black;
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;;
+}
+
+h3 a:hover {
+    color: white;
+}
+
+#createComment_section p label {
+
+}
+
+textarea {
+    resize: none;
+}
+
+#create_chat_section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+#create_chat_section h3 a {
+    background-color: black;
+    border-radius: 5px;
+    padding: 5px;
+    color: white;
+    text-transform: none;
+}
+
+#create_chat_section h3 a:hover {
+    background-color: ;
+}
+
+#createComment_section p textarea{
+    width: 80%;
+    height: 20px;
+    padding: 10px;
 }
 
 /* Posts Page specific */
@@ -65,45 +134,436 @@ h2 {
     display: none;
 }
 
+#create_chat_section {
+    font-size: 20px;
+    margin: 0 auto;
+    text-shadow: 2px 2px 6px #3333337e;
+}
+
 #filter_posts_section {
-    display:flex; 
-    justify-content: space-evenly;
+    text-align: center;
     margin-top: 10px;
+    padding-bottom: 10px;
 }
 
 #filter_posts_section button {
+    flex: 1;
+    min-width: 20px;
+    max-width: 150px;
     border: none;
-    background-color: aliceblue;
-    color: blue;
-    padding: 15px 32px;
-    box-shadow: 2px 2px 2px;
+    background-color: rgb(0, 153, 248);
+     /* #3d5dfd; */
+    /* background-color: rgba(81, 135, 223, 0.764); */
+    color: white;
+    padding: 20px 38px;
+    box-shadow: 5.5px 5.5px 5px rgb(0, 0, 0);
+    margin-bottom: 10px 10px;
+    font-size: 20px;
+    font-weight: 500;
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+}
+
+#filter_posts_section button:focus {
+    outline: none;
+    background-color: #000000;
+    box-shadow: 1px 1px 2px black;
+    color: white;
+    
 }
 
 .post_images {
     width: auto;
-    height: 60vw;
-    width: 90vw;
+    height: 55vw;
+    width: 80vw;
+    max-width: 700px;
+    border-radius: 5%;
     object-fit: cover;
+}
+
+.post:hover .post_images {
+    width: 84vw;
 }
 
 .post {
     text-align: center;
-    border-top: 1px black solid;
-    padding-bottom: 25px;
+    border-top: 3px black solid;
+    padding: 25px 10px;
+    /* border: 3px solid;
+    border-image: linear-gradient(to right, #743ad5, #d53a9d) 1;
+    border-image-slice: 1; */
     
 }
 
-.post h3{
-    margin: 0 auto;
-    font-size: 25px;
+.post:hover {
+    background-color: rgb(0, 153, 248);
+    padding: -10px;
 }
 
-.post p {
-    font-size: 14px;
+.posts_content {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #333;
 }
+
+.post:hover h3 {
+    font-size: 45px;
+}
+
+.post h3{
+    color:#333;
+    margin: 0 auto;
+    font-size: 40px;
+    /* transform: scaleY(0.82);
+    letter-spacing: 4px; */
+    font-weight:bold;
+    font-family: 'Oswald', 'sans-serif';
+    /* text-decoration: underline; */
+    /* text-shadow: 3px 3px 4px rgba(130, 130, 233, 0.524); */
+}
+
+.posts_post_text {
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+    font-size: 18px;
+}
+
+.post:hover .posts_post_text {
+    font-size: 20px;
+}
+
 
 .post_section {
-    height: 75vh;
+    height: 80vh;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    
+    
+}
+
+/* JS contact form/JS guess game */
+#js_form_section {
+    grid-column: 1/6;
+    grid-row: 6/7;
+}
+
+#contact_form  {
+    display: flex;
+    flex-direction: column;
+}
+
+.hide {
+    display: none;
+}
+
+.error {
+    border: 2px solid red;
+}
+
+#js_guess_section{
+    grid-column: 1/6;
+
+    border-top: 2px solid black;
+    grid-row: 5/6;
+}
+
+
+
+/* post.html specific */
+#postPageSection {
+    overflow-y: scroll;
+    /* height: 90vh; */
+    padding: 0px 20px 20px 20px;
+    background-color: rgb(0, 153, 248);
+}
+
+#comment_div {
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+}
+
+#comment_owner {
+    font-weight: bold;
+}
+
+#comment_text {
+    margin-left: 10px;
+}
+
+#post_header_div h2 {
+    text-transform: uppercase;
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+    padding-left: none;
+}
+
+/* create_post changes */
+#create_post_section {
+    margin: 0 auto;
+    grid-column: 1/6;
+    grid-row: 1/7;
+    width: 50vw;
+    min-width: 500px;
+    background-color: #4ba8cd;
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 20px;
+    /* height: 520px; */
+    box-shadow: 0px 0px 10px black;
+}
+
+#create_post_section h2 {
+    text-align: center;
+}
+
+#create_form {
+    display: grid;
+    grid-row: 1fr 1fr 1fr 1fr 1fr;
+    grid-column: 1fr 1fr;
+    justify-content: center;
+    height: 75vh;
+    
+}
+
+#create_form p:nth-child(-n+3) {
+    display: flex;
+    flex-direction: column;
+    grid-column: 1/3;
+}
+
+#create_form label {
+    
+}
+
+#create_form p:first-of-type textarea{
+    height: 20px;
+    padding: 10px;
+
+    
+}
+
+#create_form textarea {
+    max-width: 500px;
+    grid-column: 1/3;
+    
+}
+
+#create_form button {
+    grid-column: 1/3;
+    padding: 10px;
+    width: 50%;
+    justify-self: center;
+}
+
+/* Login/Register Page */
+#login_container, #register_div{
+    display: flex;
+    flex-direction: column;
+    grid-column: 1/6;
+    grid-row: 1/6;
+    text-align: center;
+    flex-shrink: 1;
+    padding: 10px;
+}
+
+#login_container h2, #register_div h2 {
+    padding-left: 0;
+}
+
+#login_container form, #register_div form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: left;
+    max-width: 400px;
+}
+
+#id_username, #id_password, #id_password1, #id_password2 {
+    padding: 12px;
+    min-width: 250px;
+    max-width: 400px;
+    width: 80%;
+    font-size: 18px;
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+}
+
+#login_container button, #register_div button {
+    font-size: 22px;
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+    padding: 20px;
+    margin-top: 15px;
+}
+
+label {
+    font-size: 22px;
+    font-family: 'Roboto', 'Arial Narrow', Arial, sans-serif;
+}
+
+@media screen and (min-width:470px) {
+    #filter_posts_section {
+        display:flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        
+    }
+    
+    #filter_posts_section button {
+        flex: 1;
+        min-width: 20px;
+        max-width: 150px;
+        padding: 20px 38px;
+    }
+}
+
+@media screen and (min-width:950px) {
+    html {
+        
+    }
+
+    body {
+        /* width: 90vw; */
+
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        /* background-color: white; */
+    }
+
+    /* posts.html */
+
+    #create_chat_section {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+
+    #filter_posts_section {
+        margin: 0 auto;
+        background: none;
+        grid-column: 1/2;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #filter_posts_section button {
+        margin: 20px 0px 0px 0px;
+    }
+
+    #all_post_sections{
+        height: 80vh;
+        grid-column: 2/6;
+        grid-row: 1/5;
+        /* border-left: 3px solid black;
+        border-bottom: 3px solid black; */
+        /* background-color: #4ba8cd; */
+        box-shadow: -3px 3px 7px black;
+    }
+
+
+    .post_section {
+        /* background-color: rgb(0, 153, 248); */
+
+    }
+
+
+    .post_images {
+        width: auto;
+        min-height: 300px;
+        min-width: 400px;
+        height: 20vw;
+        width: 30vw;
+        object-fit: cover;
+        margin-left: 20px;
+        
+    }
+
+    .post:hover .post_images {
+        width: 32vw;
+        height: 22vw;
+    }
+
+    .post {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        height: 300px;
+    }
+
+    h3, .post p {
+        grid-column: 1/2;
+    }
+
+    .post_images {
+        grid-column: 2/3;
+    }
+
+    /* Post.html page specific */
+    #scrollbar_div {
+        overflow-y: hidden;
+        grid-column: 1/6;
+        grid-row: 1/7;
+        background-color: rgb(0, 153, 248);
+    }   
+    #postPageSection {
+        margin: 0 auto;
+        width:65vw;
+        height: 90vh;
+        overflow-y:scroll;
+        /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; 
+        grid-template-columns: 1fr 1fr 1fr; */
+        /* padding: 0px 20px 20px 20px; */
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0px 0px 10px black;
+        color: black;
+        background-color: white;
+    }
+
+    #postPageSection img {
+        height: auto;
+        width: auto;
+        max-height: 60vh;
+        max-width: 60vw; 
+        object-fit:contain;
+        align-self: center;
+    }
+
+    /*#like_section {
+        grid-column: 1/2;
+        grid-row: 5/7;
+    }
+
+    #createComment_section {
+        grid-column: 2/4;
+        grid-row: 6/7;
+    } 
+
+    #comment_section {
+        grid-column: 1/6;
+        grid-row: 7/8;
+    } 
+
+    /* #edit_delete_section {
+        display: flex;
+        grid-column: 2/3;
+        grid-row: 1/2;
+    } */ */
+
+    /* register/login page */
+    #login_container form, #register_div form {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin: 0 auto;
+        text-align: left;
+        max-width: 400px;
+    }
+    
+    #id_username, #id_password, #id_password1, #id_password2 {
+        padding: 12px;
+        width: 100%;
+        width: 350px;
+    }
 }
