--- a/main_hub/templates/main_hub/createPost.html
+++ b/main_hub/templates/main_hub/createPost.html
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+{% extends 'main_hub/base.html' %}
+
+{% block content %}
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <form method="post" enctype="multipart/form-data"> <!-- enctype encodes files to allow submission using Post -->
-            {% csrf_token %} 
-            {{ form.as_p }} 
-            <button type="submit">Post</button>
-        </form>
+        <section id="create_post_section">
+            <h2>Create Post</h2>
+            <form method="post" enctype="multipart/form-data" id="create_form"> <!-- enctype encodes files to allow submission using Post -->
+                {% csrf_token %} 
+                {{ form.as_p }} 
+                <button type="submit">Post</button>
+            </form>
+        </section>
         
-        <script src="" async defer></script>
-    </body>
-</html>
+        
+{% endblock content %}
 
