--- a/main_hub/templates/main_hub/edit_post.html
+++ b/main_hub/templates/main_hub/edit_post.html
@@ -1,11 +1,12 @@
 {% extends 'main_hub/base.html' %}
 
 {% block content %}
-
-<form method="post" enctype="multipart/form-data"> <!-- enctype encodes files to allow submission using Post -->
-    {% csrf_token %} 
-    {{ form.as_p }} 
-    <button type="submit">Update</button>
-</form>
+<section id="create_post_section">
+    <form method="post" enctype="multipart/form-data" id="create_form"> <!-- enctype encodes files to allow submission using Post -->
+        {% csrf_token %} 
+        {{ form.as_p }} 
+        <button type="submit">Update</button>
+    </form>
+</section>
 
 {% endblock %}
