--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,13 +1,15 @@
 {% extends 'main_hub/base.html'%}
 
 {% block content %}
-<h2>Login</h2>
-<form method="post" action="{% url 'users:login' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
+<div id="login_container">
+    <h2>Login</h2>
+    <form method="post" action="{% url 'users:login' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
 
-    <button name="submit">Log in</button>
-    <input type="hidden" name="next" value="{% url 'main_hub:index' %}">
-</form>
+        <button name="submit">Log in</button>
+        <input type="hidden" name="next" value="{% url 'main_hub:index' %}">
+    </form>
+</div>
 
 {% endblock %}
