--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,13 +1,15 @@
 {% extends 'main_hub/base.html' %}
 
 {% block content %}
+<div id="register_div">
+    <h2>Register</h2>
+    <form method="post" action="{% url 'users:register' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
 
-<form method="post" action="{% url 'users:register' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-
-    <button name="submit" >Register</button>
-    <input type="hidden" name="next" value="{% url 'main_hub:index' %}">
-</form>
+        <button name="submit" >Register</button>
+        <input type="hidden" name="next" value="{% url 'main_hub:index' %}">
+    </form>
+<div>
 
 {% endblock %}
